CSDEV/objects/HAE_CS_Case_Auto_Archive_Rules__mdt.object
<CustomObject>
    <description>HAE: It&apos;s responsible to define auto archival logic for closed case.</description>
    <fields>
        <fullName>HAE_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>HAE: it holds active state.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Auto_Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE: case will be closed if this checkbox has been checked and subject is blank.</description>
        <inlineHelpText>Case will be auto closed if this checkbox has been checked and the Subject is blank.</inlineHelpText>
        <label>Auto Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Case_Group__c</fullName>
        <description>HAE: defines the case group.</description>
        <inlineHelpText>It defines the case group of &apos;to address&apos;.</inlineHelpText>
        <label>Case Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CS NA</fullName>
                    <default>true</default>
                    <label>CS NA</label>
                </value>
                <value>
                    <fullName>CS Orders NA</fullName>
                </value>
                <value>
                    <fullName>CS UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAE_From_Email_Address__c</fullName>
        <description>HAE: It contains from email address.</description>
        <label>From Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HAE_Subject__c</fullName>
        <description>HAe: contains sample subject of the email.</description>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>CS Case Auto Archive Rules</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>HAE_Active__c</columns>
        <columns>HAE_From_Email_Address__c</columns>
        <columns>HAE_Subject__c</columns>
        <columns>HAE_Case_Group__c</columns>
        <columns>HAE_Auto_Archive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>CS Case Auto Archive Rules</pluralLabel>
</CustomObject>